[package]
name = "transports_py"
version = "0.1.2"
edition = "2021"
publish = false

[lib]
name = "transports"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
transports = { path = "./rust", version = "*" }
pyo3 = { version = "0.25", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true
