[build-system]
requires = ["hatchling", "hatch-js", "hatch-rs"]
build-backend = "hatchling.build"

[project]
name = "transports"
authors = [{name = "1kbgz", email = "dev@1kbgz.com"}]
description = "Generic communication library"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.2"
requires-python = ">=3.9"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "aiohttp",
    "aiostream",
    "bigbrother",
    "orjson",
    "pydantic",
    "starlette",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "cibuildwheel",
    "codespell>=2.4,<2.5",
    "hatch-js",
    "hatch-rs",
    "hatchling",
    "mdformat>=0.7.22,<0.8",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/1kbgz/transports"
Homepage = "https://github.com/1kbgz/transports"

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "transports/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rust/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "Cargo.toml",
    "Cargo.lock",
    "js/pnpm-lock.yaml",
    "Makefile",
    ".vscode/*",
    "transports/extension/**/*",
    "docs/**/*",
    "js/dist/**/*",
    "rust/.config/*",
    "rust/Cargo.lock",
    "rust/README.md",
]

[tool.cibuildwheel]
build = "cp39-*"
test-command = "pytest -vvv {project}/transports/tests"
test-requires = ["pytest", "pytest-cov", "pytest-sugar", "pytest-xdist"]

[tool.cibuildwheel.linux]
before-all = """
curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y
rustup target add aarch64-unknown-linux-gnu
rustup target add x86_64-unknown-linux-gnu
"""
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always", SKIP_HATCH_JS="1" }
skip = "*i686* *musllinux*"

[tool.cibuildwheel.macos]
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always", MACOS_DEPLOYMENT_TARGET=11.0}
archs = "arm64"

[tool.cibuildwheel.windows]
environment = {PATH="$UserProfile\\.cargo\bin;$PATH", CARGO_TERM_COLOR="always"}
skip = "*win32 *arm_64"

[tool.coverage.run]
branch = true
omit = [
    "transports/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build.hooks.hatch-js]
path = "js"
build_cmd = "build"
tool = "pnpm"
targets = ["transports/extension/cdn/index.js"]

[tool.hatch.build.hooks.hatch-rs]
verbose = true
module = "transports"
path = "."

[tool.hatch.build.targets.sdist]
packages = ["transports", "/js", "/rust", "/src"]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["transports"]
exclude = ["/js", "/rust", "/src"]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "transports/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["transports"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
