[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "transports"
authors = [{name = "1kbgz", email = "dev@1kbgz.com"}]
description="Generic communication library"
version = "0.1.2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = []
dependencies = [
    "aiohttp",
    "aiostream",
    "bigbrother",
    "orjson",
    "pydantic",
    "starlette",
    "udatetime",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
develop = [
    "black>=23",
    "bump2version",
    "check-manifest",
    "isort",
    "maturin>=1,<2",
    "pytest",
    "pytest-cov",
    "ruff>=0.3,<=0.4",
    "semgrep",
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/1kbgz/transports"
homepage = "https://github.com/1kbgz/transports"

[tool.black]
color = true
line-length = 150
target-version = ['py310']
skip-string-normalization = true

[tool.check-manifest]
ignore = []

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 150
profile = "black"
default_section = "THIRDPARTY"
sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "transports"

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'transports/tests'

[tool.ruff]
line-length = 150

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

