[package]
name = "transports"
version = "0.1.1"
authors = ["timkpaine <t.paine154@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/timkpaine/transports"
description = "Generic communication library"

[lib]
name = "transports"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
